fix: use higher contrast color tokens for code comments

--- a/docs/src/assets/scss/syntax-highlighter.scss
+++ b/docs/src/assets/scss/syntax-highlighter.scss
@@ -60,10 +60,10 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-    color: #6e7f8e;
+    color: var(--color-neutral-500);
 
     [data-theme="dark"] & {
-        color: #8e9fae;
+        color: var(--color-neutral-400);
     }
 }
 
